# ClipSeek

./: .dockerignore  .env  .gitignore  FAQ.md  LICENSE.md  Makefile  README.md  app.py  config.py  config.yaml  docker-compose.yaml  pyproject.toml
LanguageBind/: README.md  inference.py  pyproject.toml
LanguageBind/languagebind/: __init__.py
LanguageBind/languagebind/audio/: modeling_audio.py  processing_audio.py
LanguageBind/languagebind/depth/: modeling_depth.py  processing_depth.py
LanguageBind/languagebind/image/: modeling_image.py  processing_image.py
LanguageBind/languagebind/thermal/: modeling_thermal.py  processing_thermal.py
LanguageBind/languagebind/video/: modeling_video.py  processing_video.py
backend/: Dockerfile  Makefile  README.md  aliases.py  app.py  config.py  factory.py  pyproject.toml  server.py
backend/entity/: embedder.py  factory.py  retriever.py  searcher.py
backend/entity/retriever/: retriever.py  utils.py
backend/handler/: base.py  info.py  resources.py
backend/handler/search/: v1.py
backend/handler/v1/: search.py
backend/scripts/: README.md  SCRIPTS.md  compute_embeddings.py  create_index.py  generate_thumbnails.py
backend/src/: aliases.py  config.py  server.py  types.py
backend/src/entity/: embedder.py  factory.py  searcher.py  storage.py
backend/src/entity/embedder/: base.py  language_bind.py  random.py
backend/src/entity/retriever/: base.py  faiss.py  milvus.py  retriever.py  utils.py
backend/src/entity/searcher/: base.py  batch.py
backend/src/entity/storage/: base.py  faiss.py  milvus.py
backend/src/handler/: info.py  resources.py
backend/src/handler/search/: v1.py
backend/src/utils/: docstring.py  streaming.py
data/: DATASETS.md  EXAMPLE.md
frontend/: Dockerfile  Makefile  README.md  app.py  package-lock.json  package.json  tailwind.config.ts  vite.config.js
frontend/custom_components/: __init__.py
frontend/scroller/: __init__.py  index.html  script.js  style.css
frontend/src/: app.css  app.html  stores.js
frontend/src/lib/: api.js  config.js  utils.js
frontend/src/lib/components/: Gallery.svelte  Logger.svelte  MediaView.svelte  SearchForm.svelte  index.js
frontend/src/routes/: +page.js  +page.server.js  +page.svelte  +server.js
frontend/src/routes/indexes/: +server.js
frontend/src/routes/resources/[type]/[dataset]/[version]/[...path]/: +server.js
frontend/src/routes/search/: +server.js
indexes/: README.md
old_frontend/: app.py
old_frontend/scroller/: __init__.py
scripts/: compute_embeddings.py  index_dataset.py  split_videos.sh
src/: app.py  config.py  embedder.py  retriever.py
src/custom_components/: __init__.py  index.html  script.js  style.css
