[tool.poetry]
name = "LanguageBind"
version = "0.1.0"
description = "LanguageBind: Extending Video-Language Pretraining to N-modality by Language-based Semantic Alignment"
authors = ["PKU-YUAN-Lab (袁粒课题组-北大信工)"]
license = "MIT"
homepage = "https://github.com/PKU-YuanGroup/LanguageBind"

[tool.poetry.dependencies]
python = "^3.9.8"
more-itertools = "^10.2.0"
tqdm = "^4.66.2"
numpy = "^1.26.4"
pandas = "^2.2.2"
torch = [
    { version = "^1.13.1", source = "pypi", platform = "darwin" },
    { version = "^1.13.1", source = "pytorch", platform = "linux" },
    { version = "^1.13.1", source = "pytorch", platform = "win32" },
]
torchvision = [
    { version = "^0.14.1", source = "pypi", platform = "darwin" },
    { version = "^0.14.1", source = "pytorch", platform = "linux" },
    { version = "^0.14.1", source = "pytorch", platform = "win32" },
]
torchaudio = [
    { version = "^0.13.1", source = "pypi", platform = "darwin" },
    { version = "^0.13.1", source = "pytorch", platform = "linux" },
    { version = "^0.13.1", source = "pytorch", platform = "win32" },
]
transformers = "4.30.2"
einops = "^0.8.0"
peft = { git = "https://github.com/huggingface/peft", rev = "08cb3dde577747f6ca6638c884fd66fd16cf2e9d" } # 0.10.0 does not fit
opencv-python = "^4.9.0.80"
eva-decord = "^0.6.1"  # decord = "^0.6.0" does not have bindings for macos
pytorchvideo = "^0.1.5"
soundfile = "^0.12.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
