[tool.poetry]
name = "LanguageBind"
version = "0.1.0"
description = "LanguageBind: Extending Video-Language Pretraining to N-modality by Language-based Semantic Alignment"
authors = ["PKU-YUAN-Lab (袁粒课题组-北大信工)"]
license = "MIT"
homepage = "https://github.com/PKU-YuanGroup/LanguageBind"

[tool.poetry.dependencies]
python = "^3.9.8"
numpy = "^1.26.4"
torch = "^1.13.1"
torchvision = "^0.14.1"
torchaudio = "^0.13.1"
transformers = "4.30.2"
einops = "^0.8.0"
# peft = { git = "https://github.com/huggingface/peft", rev = "08cb3dde577747f6ca6638c884fd66fd16cf2e9d" } # 0.10.0 does not fit
peft = "0.5.0"
opencv-python = "^4.9.0.80"
eva-decord = "^0.6.1"  # decord = "^0.6.0" does not have bindings for macos
pytorchvideo = "^0.1.5"
soundfile = "^0.12.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
